--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,6 +21,7 @@ requirements:
     - python >=3.7
     - setuptools
   run:
+    - pillow
     - pmw
     - python >=3.7
     - seamm-util >=2021.5.5
