--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,13 @@
 {% set name = "seamm-widgets" %}
-{% set version = "2022.7.29" %}
-{% set sha256 = "712c6a5c80534d876a04506dd4313e1ec059c16f389a6d65905e453a9a0d3d17" %}
+{% set version = "2022.10.19" %}
+{% set sha256 = "ac0e2345ee34848d1647e8435f809177eb2b814d656ce6ec1f6d7362f5231c1d" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://files.pythonhosted.org/packages/99/0f/fe2337571fc754134aaa83582a21540c29b4ab33136816d8642209f5cc1a/seamm_widgets-2022.7.29.tar.gz
+  url: https://pypi.io/packages/source/s/seamm-widgets/seamm_widgets-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
 build:
